# Bangalore_Team6_ArgusReimagined

./: .env  README.md  argus.db  argus_lms_project_prd.md  debug_search.py  design.md  docker-compose.yml  es_create.py  es_exists_test.py  es_put_mapping.py  es_test_exists.py  es_test_httpx.py  head_test.py  health_check.py  httpx_ipv4_test.py  implementation_plan.md  inspect_es.py  local_test.py  manual_full_test.py  manual_query.py  manual_test_search.py  requirements.txt  run_server.py  seed_db.py  setup_and_run.bat  socket_test.py  test_api.py  test_es.py  test_hybrid_search.py
.cursor/: settings.json
argus_celestial/: DESIGN.md
argus_dashboard_sticky_nav_extended_quiz_center_5/: code.html
argus_home_synchronized_sidebar_2/: code.html
backend/: .env  .env.example  alembic.ini  argus.db  pyproject.toml  requirements.txt  seed.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema_and_seed.py  002_add_activity_completions.py
backend/app/: config.py  database.py  main.py  seed.py
backend/app/api/v1/: activities.py  auth.py  router.py  search.py
backend/app/core/: constants.py  dependencies.py  security.py
backend/app/middleware/: logging.py
backend/app/models/: __init__.py  activity_completion.py  house.py  section.py  transaction.py  user.py
backend/app/schemas/: activity.py  auth.py  user.py
backend/app/scripts/: index_data.py
backend/app/services/: search_service.py
backend/app/services/search/: client.py
backend/tests/: conftest.py  test_activities.py  test_auth.py  test_models.py  test_search.py
frontend/: app.js  (+3 more)
(+20 files in other folders)
